--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
     <div class = "top-container">
-        <img class = "img1" src="/images/cloud.png" alt="cloud-image">
+        <img class = "img1" src="images/cloud.png" alt="cloud-image">
         <h1 class = "name" >I'm fojle</h1>
         <h2>a programmer</h2>
-        <img class = "img2" src="/images/cloud.png" alt="cloud-image">
-        <img class = "img3" src="/images/mountain.png" alt="mountain-image">
+        <img class = "img2" src="images/cloud.png" alt="cloud-image">
+        <img class = "img3" src="images/mountain.png" alt="mountain-image">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class = "profile-p" src="/images/profile.png" alt="profile-photo">
+          <img class = "profile-p" src="images/profile.png" alt="profile-photo">
           <h2>Hello.</h2>
           <p class = "intro">I am a undergraduate Studnet in CUET.My department name is CSE. My goal is a goal. I ❤️ coffe and driving bike.</p>
         </div>
@@ -29,12 +29,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="s-img1" src="/images/skill1.gif" alt="">
+            <img class="s-img1" src="images/skill1.gif" alt="">
             <h3>Programming</h3>
             <p>I started learning coding in versity life because i love to solve problem.I can solve any basic problem with c++. I also can design and implement desktop application using java swing</p>
           </div>
           <div class="skill-row">
-            <img class="s-img2" src="/images/skill2.gif" alt="">
+            <img class="s-img2" src="images/skill2.gif" alt="">
             <h3>Bike Driving</h3>
             <p>One of the major skill of mine is driving Bike❤️. I love to drive Bike very much.During free time i go to long drive with my beloved friends.</p>
           </div>
