--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
           <img class = "profile-p" src="images/profile.png" alt="profile-photo">
           <h2>Hello.</h2>
-          <p class = "intro">I am a undergraduate Studnet in CUET.My department name is CSE. My goal is a goal. I ❤️ coffe and driving bike.</p>
+          <p class = "intro">I am a undergraduate Studnet in CUET.My department name is CSE. My goal is a goal. I ❤️ coffee and driving bike.</p>
         </div>
         <hr>
         <div class="skills">
@@ -42,7 +42,7 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>If you love coffe as much as i do</h3>
+          <h3>If you love coffee as much as i do</h3>
           <p>Love coffe as much as i do? Let's talk about our experiences.<br> We can code while we taking coffe.</p>
           <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
