--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>If you love coffee as much as i do</h3>
-          <p>Love coffe as much as i do? Let's talk about our experiences.<br> We can code while we taking coffe.</p>
+          <p>Love coffee as much as i do? Let's talk about our experiences.<br> We can code while we taking coffe.</p>
           <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
         </div>
       </div>
